k8-10/dockerprivatereg.yaml

# pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: private-reg
spec:
  contaiener:
    name: my-container
  imagePullSecrets:
    - name: docker-private-reg
