k8-10/stroage.yaml
apiVersion: v1
kind: Pod
metadata:
  name: azurestroage
spec:
  containers:
    - name: my-contaiener
      image: nginx
      volumeMounts:
        - name: storage
          mountPath: /var/www/html
  volumes:
    - name: storage
      persistentVolumeClaim:
      claimName: azurefile 

---
kubectl create secret generic azure-secret --from-literal=azurestorageaccountname=$AKS_PERS_STORAGE_ACCOUNT_NAME --from-literal=azurestorageaccountkey=$STORAGE_KEY
