k8-10/tain-and-toleration.yaml
# kubectl taint nodes node-name key=value:taint-effect
#(this is for taine-effect ==>> NoSchedule | PreferNoSchedule | NoExecute )
# kubectl taint nodes node1 app=blue:NoSchedule

apiVersion: v1
kind: Pod
metadata:
  name: toleration
spec: 
  containers:
    - name: nginx-container
      image: nginx
  tolerations:
    - key: "app"
      operation: "Equal"
      value: "blue"
      effect: "NoSchedule"
