k8-10/ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: test
spec:
  rules:
    - http:
        paths:
          - path: .
            pathType: Prefix
            backend:
              service:
                name: test
              port:
                number: 80
